RESOLVED FIXED63287
[GTK] [WebKit2] WebKitTestRunner does not properly load TestNetscapePlugin
https://bugs.webkit.org/show_bug.cgi?id=63287
Summary [GTK] [WebKit2] WebKitTestRunner does not properly load TestNetscapePlugin
Martin Robinson
Reported 2011-06-23 14:02:28 PDT
TestNetscapePlugin is not loaded for WKTR runs.
Attachments
Patch (3.67 KB, patch)
2011-06-23 14:30 PDT, Martin Robinson
xan.lopez: review+
Martin Robinson
Comment 1 2011-06-23 14:30:43 PDT
Xan Lopez
Comment 2 2011-06-23 14:34:54 PDT
Comment on attachment 98405 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=98405&action=review > Tools/WebKitTestRunner/gtk/TestControllerGtk.cpp:79 > + return g_filename_to_utf8(value, -1, 0, &bytesWritten, 0); Should just pass 0 for bitesWritten?
Martin Robinson
Comment 3 2011-06-23 14:40:13 PDT
Comment on attachment 98405 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=98405&action=review Thanks for the review! >> Tools/WebKitTestRunner/gtk/TestControllerGtk.cpp:79 >> + return g_filename_to_utf8(value, -1, 0, &bytesWritten, 0); > > Should just pass 0 for bitesWritten? The documentation doesn't say you can, so I think it's safer to leave it. :/
Martin Robinson
Comment 4 2011-06-23 14:41:48 PDT
Note You need to log in before you can comment on or make changes to this bug.